Added ES spellcheck & deleted headers fix
I've removed the headers fix because the author of the Encore theme
already solved the problem with those headers.
And also add an spanish spellchecker for those notes that I write in my
native language.

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "showLineNumber": false,
   "readableLineLength": true,
-  "promptDelete": false
+  "promptDelete": false,
+  "vimMode": false
 }
